# chip-heater

./: .env.example  .gitignore  AGENTS.md  README.md  docker-compose.yml
backend/: Dockerfile  pyproject.toml
backend/src/heater/: config.py  database.py  dependencies.py  evolution.py  main.py  scheduler.py  schemas.py
backend/src/heater/api/: auth.py  instances.py  webhooks.py
backend/src/heater/models/: instance.py  message.py  user.py  warming_session.py
backend/src/heater/tests/: test_basic.py  test_engine_logic.py  test_evolution.py
backend/src/heater/warming/: behaviors.py  content.py  engine.py
backend/tests/: conftest.py  test_api_instances.py  test_api_webhooks.py  test_auth.py  test_error_handling.py  test_warming_engine.py
docs/: AI-MANUAL.md
frontend/: Dockerfile  package-lock.json  package.json
frontend/src/components/: InstanceCard.tsx  QRCodeScanner.tsx
frontend/src/lib/: api.ts
frontend/src/pages/: dashboard.tsx  login.tsx
